name:                physical-quantities
version:             0.0.1
synopsis:            Physical quantities.
description:         Provides type-safe physical quantities.
homepage:            https://github.com/mtesseract/physical-quantities#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Schulte
maintainer:          mtesseract@silverratio.net
copyright:           (c) 2017 Moritz Schulte
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Physics.Quantities
  build-depends:       base >= 4.7 && < 5
                     , type-level-integers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mtesseract/physical-quantities
